[gd_scene load_steps=10 format=3 uid="uid://ewvo6ju3iblb"]

[ext_resource type="PackedScene" uid="uid://baf4uogxpw50c" path="res://game-objects/buildings/base-building/base-building.tscn" id="1_q76uy"]
[ext_resource type="Script" uid="uid://cqcnqp7yju10o" path="res://game-objects/buildings/depot/depot.gd" id="2_5mj2m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q76uy"]
size = Vector2(100, 141)

[sub_resource type="Curve2D" id="Curve2D_5mj2m"]
bake_interval = 50.0
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 10, -25, 0, 0, 0, 0, 9, -34, 0, 0, 0, 0, 12, -43, 0, 0, 0, 0, 23, -51, 0, 0, 0, 0, 33, -45, 0, 0, 0, 0, 43, -38, 0, 0, 0, 0, 51, -35, 0, 0, 0, 0, 63, -34, 0, 0, 0, 0, 84, -34, 0, 0, 0, 0, 115, -34, 0, 0, 0, 0, 124, -34)
}
point_count = 11

[sub_resource type="Curve2D" id="Curve2D_bsqdu"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 10, -25, 0, 0, 0, 0, 10, -66, 0, 0, 0, 0, 14, -73, 0, 0, 0, 0, 24, -76, 0, 0, 0, 0, 36, -78, 0, 0, 0, 0, 60, -77, 0, 0, 0, 0, 78, -78, 0, 0, 0, 0, 91, -78, 0, 0, 0, 0, 121, -79)
}
point_count = 9

[sub_resource type="Curve2D" id="Curve2D_txohi"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 10, -25, 0, 0, 0, 0, 10, -70, 0, 0, 0, 0, 10, -100, 0, 0, 0, 0, 30, -108, 0, 0, 0, 0, 57, -110, 0, 0, 0, 0, 87, -109, 0, 0, 0, 0, 109, -109, 0, 0, 0, 0, 121, -109)
}
point_count = 8

[sub_resource type="Curve2D" id="Curve2D_q76uy"]
bake_interval = 50.0
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 86, -34, 0, 0, 0, 0, 57, -34, 0, 0, 0, 0, 44, -34, 0.156296, 0.104198, -0.156296, -0.104198, 33, -35, 0, 0, 0, 0, 23, -39, 0, 0, 0, 0, 14, -46, 0, 0, 0, 0, 4, -46, 0, 0, 0, 0, -7, -42, 0, 0, 0, 0, -10, -36, 0, 0, 0, 0, -10, -25)
}
point_count = 10

[sub_resource type="Curve2D" id="Curve2D_7lk5o"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 86, -79, 0, 0, 0, 0, 49, -79, 0, 0, 0, 0, 19, -78, 0, 0, 0, 0, -1, -77, 0, 0, 0, 0, -11, -61, 0, 0, 0, 0, -11, -42, 0, 0, 0, 0, -10, -26)
}
point_count = 7

[sub_resource type="Curve2D" id="Curve2D_jwde0"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 87, -110, 0, 0, 0, 0, 45, -111, 0, 0, 0, 0, 19, -111, 0, 0, 0, 0, 4, -106, 0, 0, 0, 0, -7, -92, 0, 0, 0, 0, -10, -81, 0, 0, 0, 0, -11, -55, 0, 0, 0, 0, -11, -35, 0, 0, 0, 0, -10, -25)
}
point_count = 9

[node name="BaseBuilding" instance=ExtResource("1_q76uy")]
script = ExtResource("2_5mj2m")

[node name="Terrain" type="Polygon2D" parent="." index="1"]
position = Vector2(-8.34675e-21, 0)
scale = Vector2(0.0537146, 0.0537146)
color = Color(0.232243, 0.549304, 0.337196, 1)
polygon = PackedVector2Array(-3202.11, -3499.98, 3146.26, -3518.6, 3146.26, 0, 81.9799, 4.31473, -3183.49, 0)

[node name="Road" type="Polygon2D" parent="." index="2"]
position = Vector2(-1, 0)
scale = Vector2(0.231764, 0.231764)
color = Color(0.223103, 0.223103, 0.223103, 1)
polygon = PackedVector2Array(686.043, -802.541, 686.043, -608.378, 686.043, -94.9241, 81.9799, -94.9241, 81.9799, 4.31473, -85, 3, -86.2947, -86.2947, -133.757, -90.6094, -181.219, -99.2389, -215.737, -112.183, -250.255, -133.757, -276.143, -163.96, -284.772, -798.226)

[node name="Building" type="Polygon2D" parent="." index="3"]
position = Vector2(-108, -74)
scale = Vector2(0.0537146, 0.0537146)
color = Color(0.291364, 0.206397, 0.0484127, 1)
polygon = PackedVector2Array(-972.378, -1306.78, 907.927, -1306.78, 896.822, 680.435, 833.459, 927.252, 628.673, 1169.27, 386.653, 1280.97, -4.30292, 1318.21, -972.378, 1318.21)

[node name="ClickerArea" type="Area2D" parent="." index="4"]

[node name="CollisionShape" type="CollisionShape2D" parent="ClickerArea" index="0"]
position = Vector2(-110, -73.5)
shape = SubResource("RectangleShape2D_q76uy")

[node name="StopInTracks" type="Node2D" parent="." index="5"]

[node name="Track0" type="Path2D" parent="StopInTracks" index="0"]
curve = SubResource("Curve2D_5mj2m")

[node name="Track1" type="Path2D" parent="StopInTracks" index="1"]
curve = SubResource("Curve2D_bsqdu")

[node name="Track2" type="Path2D" parent="StopInTracks" index="2"]
curve = SubResource("Curve2D_txohi")

[node name="StopOutTracks" type="Node2D" parent="." index="6"]

[node name="Track0" type="Path2D" parent="StopOutTracks" index="0"]
curve = SubResource("Curve2D_q76uy")

[node name="Track1" type="Path2D" parent="StopOutTracks" index="1"]
curve = SubResource("Curve2D_7lk5o")

[node name="Track2" type="Path2D" parent="StopOutTracks" index="2"]
curve = SubResource("Curve2D_jwde0")
